# pardoc

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
scripts/: run_test_suites.sh
src/pardoc/: cli.py  converters.py
tests/: test_cache.py  test_pdf_corpus_regression.py  test_pdf_regression.py
tests/snapshots/: pdf_sample_family_matrix.json  pdf_sample_representative_summary.json  sample_markdown_excerpt.txt  sample_page_summary.json
